--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.firststep.biz/",
+  "homepage": "https://www.1ststepnow.com/",
   "name": "first-step",
   "version": "0.1.0",
   "private": true,
